--- a/src/containers/Calculator/Calculator.module.scss
+++ b/src/containers/Calculator/Calculator.module.scss
@@ -1,6 +1,6 @@
 .Calculator {
     width: 90%;
-    max-width: 1000px;
+    max-width: 800px;
     margin: auto;
 }
 
@@ -9,4 +9,34 @@
     top: 80px;
     // height: 40%;
     // overflow: scroll;
+}
+
+.Overview {
+    background-color: #DEF3D9;
+    position: relative;
+    display: flex;
+    flex-direction: row;
+    height: 300px;
+}
+
+.TextSummary {
+    margin: auto 0;
+    font-weight: bold
+}
+
+.BtnAddProject {
+     background-color: #2B5C22;
+     font-weight: bold;
+     color: white;
+     padding: 5px 8px;
+     // border: 2px solid black;
+     box-shadow: 2px 2px 1px grey;
+     border-radius: 4px;
+     float: right;
+}
+
+.Header {
+    display: flex;
+    flex-direction: row;
+    height: 200px;
 }
