added some links and disclaimer to the webpage

--- a/src/components/CO2Display/CO2Display.module.scss
+++ b/src/components/CO2Display/CO2Display.module.scss
@@ -28,7 +28,7 @@
     flex-direction: row;
     justify-content: flex-start;
     width:100%;
-    // padding: 10px;
+    padding-left: 10px;
 }
 
 .LegendNoise, .LegendProjects {
