--- a/src/components/CO2Display/CO2Display.module.scss
+++ b/src/components/CO2Display/CO2Display.module.scss
@@ -7,7 +7,7 @@
   width: 15em;
   // top: 70px;
   // width: 40%;
-  margin: auto 2em;
+  margin: auto;
   // height: 0;
   // width: 20em;
   // padding-bottom: 40%;
