changed page layout

--- a/src/components/CO2Display/CO2Display.module.scss
+++ b/src/components/CO2Display/CO2Display.module.scss
@@ -27,6 +27,9 @@
     align-items: baseline;
     flex-direction: row;
     justify-content: flex-start;
+    & p {
+        margin: 5px;
+    }
     width:100%;
     padding-left: 10px;
 }
