--- a/src/containers/Calculator/Calculator.module.scss
+++ b/src/containers/Calculator/Calculator.module.scss
@@ -16,14 +16,14 @@
 .Overview {
     background-color: #DEF3D9;
     // flex-direction: row;
-    height: 360px;
+    // height: 360px;
     width: 100%;
     padding: 1rem;
 }
 .OverviewContent {
+    position: relative;
     display: flex;
     flex-direction: row;
-    // height: 200px;
     max-width: 800px;
     margin: auto;
 }
@@ -34,19 +34,25 @@
 }
 
 .BtnAddProject {
-     background-color: #2B5C22;
-     font-weight: bold;
-     color: white;
-     padding: 5px 8px;
-     // border: 2px solid black;
-     box-shadow: 2px 2px 1px grey;
-     border-radius: 4px;
-     float: right;
+    position: absolute;
+    right: 50px;
+    // top: 60px;
+    bottom: 10px;
+    background-color: #2B5C22;
+    font-weight: bold;
+    font-size: 1.2rem;
+    color: white;
+    padding: 5px 8px;
+    // border: 2px solid black;
+    box-shadow: 2px 2px 1px grey;
+    border-radius: 4px;
+    float: right;
 }
 
 .Header {
     display: flex;
     flex-direction: row;
+    align-items: baseline;
     height: 200px;
     max-width: 800px;
     margin: auto;
