--- a/src/containers/Calculator/Calculator.module.scss
+++ b/src/containers/Calculator/Calculator.module.scss
@@ -16,18 +16,20 @@
     // flex-direction: row;
     // height: 360px;
     width: 100%;
-    // padding: 1rem;
+    padding: 1rem;
 }
 .OverviewContent {
     position: relative;
     display: flex;
     flex-flow: row wrap;
+    // display: inline-block;
     max-width: 800px;
     margin: auto;
 }
 
 .TextSummary {
-    margin: auto 0;
+    margin: auto;
+    // display: inline-block;
     font-weight: bold;
     padding: 2rem 0 4rem 0;
     // width: 40%;
